Programming languages and paradigms/Interpreter/examples/bad/func_not_called.ho
func main() {
    var f = func(x int) int { return x; };
    print(f); // error:3:11: func value not called
}